# qalculate-gtk

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt
data/: Makefile.am  Qalculate!.sln  Qalculate!.vdproj  argumentrules.ui  banner.xcf  buttonsedit.ui  calendarconversion.ui  csvexport.ui  csvimport.ui  datasetedit.ui  datasets.ui  decimals.ui  flags.gresource.xml  floatingpoint.ui  functionedit.ui  functions.ui  generate_add_callback_symbols.cc  icon.xpm  io.github.Qalculate.SearchProvider.service.in  io.github.Qalculate.search-provider.ini  main.ui  matrix.ui  matrixedit.ui  meson.build  namesedit.ui  nbases.ui  org.github.Qalculate.search-provider.ini  percentage.ui  periodictable.ui  plot.ui  precision.ui  preferences.ui  qalculate-gtk.1  qalculate-gtk.appdata.xml.in  qalculate-gtk.desktop.in  qalculate-gtk.noinst.appdata.xml  selfcontained-binary.patch  setbase.ui  shortcuts.ui  simplefunctionedit.ui  (+6 more)
data/icons/: Makefile.am  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/scalable/: Makefile.am
data/its/: appdata.its
data/pkg/: README  install  selfcontained-binary.patch  update
doc/: Makefile.am  meson.build
doc/C/: Makefile.am  generatehtml  qalculate-gtk-C.omf  qalculate-gtk.xml
doc/C/figures/: calculator-buttons.dia  insert-function.dia  mainwindow.dia
doc/html/: index.html  qalc.html  qalculate-definitions-functions.html  qalculate-definitions-units.html  qalculate-definitions-variables.html  qalculate-examples.html  qalculate-expressions.html  qalculate-functions.html  qalculate-interval-arithmetic.html  qalculate-introduction.html  qalculate-mode.html  qalculate-plotting.html  qalculate-qt.html  qalculate-result.html  qalculate-units.html  qalculate-user-interface.html  qalculate-variables.html  singlepage.html
po/: LINGUAS  Makevars  POTFILES.in  ca.po  de.po  es.po  fr.po  hu.po  ka.po  meson.build  nl.po  pl.po  pt_BR.po  pt_PT.po  qalculate-gtk.pot  ru.po  sl.po  sv.po  zh_CN.po  zh_TW.po
snap/launcher/: gp-launch
snap/patches/lib/: snap-path.patch
snap/snap/: snapcraft.yaml
snap/snap/gui/: qalculate.desktop
src/: Makefile.am  buttonseditdialog.cc  buttonseditdialog.h  calendarconversiondialog.cc  calendarconversiondialog.h  callbacks.cc  callbacks.h  conversionview.cc  conversionview.h  dataseteditdialog.cc  dataseteditdialog.h  datasetsdialog.cc  datasetsdialog.h  decimalsdialog.cc  decimalsdialog.h  drawstructure.cc  drawstructure.h  exchangerates.cc  exchangerates.h  exportcsvdialog.cc  exportcsvdialog.h  expressioncompletion.cc  expressioncompletion.h  expressionedit.cc  expressionedit.h  expressionstatus.cc  expressionstatus.h  floatingpointdialog.cc  floatingpointdialog.h  functioneditdialog.cc  functioneditdialog.h  functionsdialog.cc  functionsdialog.h  historyview.cc  historyview.h  importcsvdialog.cc  importcsvdialog.h  insertfunctiondialog.cc  insertfunctiondialog.h  interface.cc  (+57 more)
