#
# doc/html/Makefile.am for qalculate
#

htmldir = $(docdir)/html
html_DATA = $(top_srcdir)/doc/html/*.html

figuresdir = $(docdir)/html/figures
figures_DATA = $(top_srcdir)/doc/html/figures/*.png $(top_srcdir)/doc/html/figures/*.svg

EXTRA_DIST = $(top_srcdir)/doc/html/*.html $(top_srcdir)/doc/html/figures/*.png $(top_srcdir)/doc/html/figures/*.svg


