#
# doc/html/Makefile.am for qalculate
#

htmldir = $(docdir)/html
figuresdir = $(docdir)/html/figures

if ENABLE_LOCAL_HELP
html_DATA = $(top_srcdir)/doc/html/*.html
figures_DATA = $(top_srcdir)/doc/html/figures/*.png $(top_srcdir)/doc/html/figures/*.svg
endif

EXTRA_DIST = $(top_srcdir)/doc/html/*.html $(top_srcdir)/doc/html/figures/*.png $(top_srcdir)/doc/html/figures/*.svg


